apps/base/grafana/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
  labels:
    # Permit routes in this namespace to attach to the OIDC Gateway
    gateway_access: "oidc"
