apps/base/grafana/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  parentRefs:
    - name: api-gateway
      namespace: envoy
  hostnames: 
    - ${ENVOY_HOSTNAME}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /grafana
      backendRefs:
        - name: grafana
          namespace: grafana
          port: 3000
          filters:
            - type: ExtensionRef
              extensionRef:
                group: gateway.envoyproxy.io
                kind: HTTPRouteFilter
                name: grafana-credential-injection
