apps/base/grafana/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grafana
spec:
  podSelector: {} 
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Allow serving web connections from the OIDC Gateway
    - from:
        - podSelector:
            matchLabels:
              gateway.envoyproxy.io/owning-gateway-name: oidc-gateway
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy
      ports:
        - port: 3000
          protocol: TCP
  egress:
    # Allow reading from InfluxDB datasource
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: influxdb2
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: influxdb
      ports:
        - port: 8086
          protocol: TCP
    # Allow DNS queries to kube-system
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
